2013-10-09  Eric Botcazou  <ebotcazou@adacore.com>

	PR middle-end/58570
	* tree-ssa-alias.c (nonoverlapping_component_refs_of_decl_p): Return
	false if both components are bitfields.

2013-10-09  Alex Velenko  <Alex.Velenko@arm.com>

	* config/aarch64/arm_neon.h (vclz_s8, vclz_s16, vclz_s32)
	(vclzq_s8, vclzq_s16, vclzq_s32, vclz_u8, vclz_u16, vclz_u32)
	(vclzq_u8, vclzq_u16, vclzq_u32): Replace ASM with C.
	* config/aarch64/aarch64.h
	(CLZ_DEFINED_VALUE_AT_ZERO): Macro fixed for clz.
	* config/aarch64/aarch64-simd-builtins.def
	(VAR1 (UNOP, clz, 0, v4si)): Replaced with iterator.

2013-10-09  Alex Velenko  <Alex.Velenko@arm.com>

	* config/aarch64/arm_neon.h (vadd_f64, vsub_f64): Implementation added.

2013-10-09  Alex Velenko  <Alex.Velenko@arm.com>

	* config/aarch64/arm_neon.h (vdiv_f64): Added.

2013-10-09  Alex Velenko  <Alex.Velenko@arm.com>

	* config/aarch64/arm_neon.h (vneg_f32): Asm replaced with C.
	(vneg_f64): New intrinsic.
	(vneg_s8): Asm replaced with C.
	(vneg_s16): Likewise.
	(vneg_s32): Likewise.
	(vneg_s64): New intrinsic.
	(vnegq_f32): Asm replaced with C.
	(vnegq_f64): Likewise.
	(vnegq_s8): Likewise.
	(vnegq_s16): Likewise.
	(vnegq_s32): Likewise.
	(vnegq_s64): Likewise.

2013-10-09  Renlin Li  <Renlin.Li@arm.com>

	* config/arm/arm.c (arm_output_mi_thunk): Use plus_constant.

2013-10-09  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/s390.c (s390_register_info_stdarg_fpr): Remove
	packed stack special handling.
	(s390_frame_info, s390_emit_prologue, s390_emit_epilogue): Switch
	back to fixed stack slots for FPRs saved due to stdarg.

2013-10-09  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/s390.c (s390_frame_info): Restructure function.

2013-10-09  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/s390.c (struct s390_frame_layout): New field
	gpr_save_slots.
	(cfun_save_arg_fprs_p, cfun_gpr_save_slot): New macros.
	(s390_reg_clobbered_rtx, s390_regs_ever_clobbered): Change type of