@@ -1,3 +1,9 @@
+2013-10-09  Marc Glisse  <marc.glisse@inria.fr>
+
+	PR tree-optimization/20318
+	* c-c++-common/pr20318.c: New file.
+	* gcc.dg/tree-ssa/pr20318.c: New file.
+
 2013-10-09  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gcc.c-torture/execute/pr58570.c: New test.
